import { newSource } from "@replayio/protocol";
import { ThreadFront } from "protocol/thread";
import { newSourcesToCompleteSourceDetails } from "./sources";

describe("newSourcesToCompleteSourceDetails", () => {
  it("should return empty array when no sources", () => {
    expect(newSourcesToCompleteSourceDetails([])).toEqual({});
  });

  it("should be able to return a complete source from a single newSource event", () => {
    expect(
      newSourcesToCompleteSourceDetails([
        {
          contentHash: "contentHash#1",
          kind: "scriptSource",
          sourceId: "1",
          url: "/index.js",
        },
      ])
    ).toMatchSnapshot();
  });

  it("can backlink generated sources properly", () => {
    expect(
      newSourcesToCompleteSourceDetails([
        {
          contentHash: "contentHash#1",
          kind: "scriptSource",
          sourceId: "1",
          url: "/index.js",
        },
        {
          contentHash: "contentHash#o1",
          kind: "sourceMapped",
          sourceId: "o1",
          generatedSourceIds: ["1"],
          url: "/index.ts",
        },
      ])
    ).toMatchSnapshot();
  });

  it("can link pretty-printed and minified sources", () => {
    expect(
      newSourcesToCompleteSourceDetails([
        {
          contentHash: "contentHash#1",
          kind: "scriptSource",
          sourceId: "1",
          url: "/index.js",
        },
        {
          generatedSourceIds: ["1"],
          kind: "prettyPrinted",
          sourceId: "pp1",
          url: "/src/index.js",
        },
      ])
    ).toMatchSnapshot();
  });

  it("can combine original, generated, and pretty-printed sources", () => {
    expect(
      newSourcesToCompleteSourceDetails([
        {
          contentHash: "contentHash#1",
          kind: "scriptSource",
          sourceId: "1",
          url: "/index.js",
        },
        {
          contentHash: "contentHash#o1",
          generatedSourceIds: ["1"],
          kind: "sourceMapped",
          sourceId: "o1",
          url: "/src/index.ts",
        },
        {
          generatedSourceIds: ["1"],
          kind: "prettyPrinted",
          sourceId: "pp1",
          url: "/src/index.js",
        },
        {
          generatedSourceIds: ["o1"],
          kind: "prettyPrinted",
          sourceId: "ppo1",
          url: "/src/index.ts",
        },
      ])
    ).toMatchSnapshot();
  });

  it("can put together HTML sources and their extracted scripts", () => {
    expect(
      newSourcesToCompleteSourceDetails([
        {
          contentHash: "contentHash#h1",
          kind: "html",
          sourceId: "h1",
          generatedSourceIds: ["2"],
          url: "/index.html",
        },
        {
          contentHash: "contentHash#2",
          kind: "inlineScript",
          sourceId: "2",
          url: "/index.html",
        },
      ])
    ).toMatchSnapshot();
  });
});

it("can link corresponding sources", () => {
  expect(
    newSourcesToCompleteSourceDetails([
      {
        contentHash: "contentHash",
        kind: "html",
        sourceId: "h1",
        url: "/index.html",
      },
      {
        contentHash: "contentHash",
        kind: "html",
        sourceId: "h2",
        url: "/index.html",
      },
    ])
  ).toMatchSnapshot();
});

it("is not fooled by pretty-printed sources with missing contentHashes", () => {
  expect(
    newSourcesToCompleteSourceDetails([
      {
        contentHash: "contentHash#h1",
        kind: "html",
        sourceId: "h1",
        url: "/index.html",
      },
      {
        generatedSourceIds: ["h1"],
        kind: "prettyPrinted",
        sourceId: "pph1",
        url: "/index.html",
      },
      {
        contentHash: "contentHash#h2",
        kind: "html",
        sourceId: "h2",
        url: "/index.html",
      },
      {
        kind: "prettyPrinted",
        generatedSourceIds: ["h2"],
        sourceId: "pph2",
        url: "/index.html",
      },
    ])
  ).toMatchSnapshot();
});

describe("ThreadFront source methods", () => {
  beforeAll(() => {
    (
      [
        {
          contentHash: "contentHash#1",
          kind: "scriptSource",
          sourceId: "1",
          url: "/index.js",
        },
        {
          contentHash: "contentHash",
          kind: "html",
          sourceId: "h1",
          generatedSourceIds: ["2"],
          url: "/index.html",
        },
        {
          contentHash: "contentHash",
          kind: "html",
          sourceId: "h2",
          url: "/index.html",
        },
        {
          contentHash: "contentHash#2",
          kind: "inlineScript",
          sourceId: "2",
          url: "/index.html",
        },
      ] as newSource[]
    ).forEach(s => ThreadFront._newSourceListener(s));
    ThreadFront.hasAllSources = true;
    ThreadFront.groupSourceIds();
  });

  describe("getSourceIdsForURL", () => {
    it("returns original versions of sources for the given URL", () => {
      expect(ThreadFront.getSourceIdsForURL("/index.js")).toEqual(["1"]);
      expect(ThreadFront.getSourceIdsForURL("/index.html")).toEqual(["h1", "h2"]);
    });
  });

  describe("getChosenSourceIdsForUrl", () => {
    it("returns the preferred and alternate sourceIds", () => {
      ThreadFront.preferSource("2", true);
      expect(ThreadFront.getChosenSourceIdsForUrl("/index.js")).toEqual([{ sourceId: "1" }]);
      expect(ThreadFront.getChosenSourceIdsForUrl("/index.html")).toEqual([
        { sourceId: "h1" },
        { sourceId: "h2" },
      ]);
      expect(ThreadFront.getChosenSourceIdsForUrl("/index.js")).toEqual([{ sourceId: "1" }]);
    });
  });

  describe("getCorrespondingSourceIds", () => {
    it("returns the preferred and alternate sourceIds", () => {
      expect(ThreadFront.getCorrespondingSourceIds("1")).toEqual(["1"]);
      expect(ThreadFront.getCorrespondingSourceIds("h1")).toEqual(["h1", "h2"]);
    });
  });

  describe("getSourceURLRaw", () => {
    it("returns the URL of the source", () => {
      expect(ThreadFront.getSourceURLRaw("1")).toEqual("/index.js");
    });
  });

  describe("getSourceURL", () => {
    it("returns the URL of the source", () => {
      expect(ThreadFront.getSourceURLRaw("1")).toEqual("/index.js");
    });
  });

  describe("getGeneratedSourceIdsForURL", () => {
    // This one seems odd to me?
    it("returns the URL of the generated sources", () => {
      expect(ThreadFront.getGeneratedSourceIdsForURL("/index.js")).toEqual(["1"]);
      expect(ThreadFront.getGeneratedSourceIdsForURL("/index.html")).toEqual(["h2", "2"]);
    });
  });

  describe("getGeneratedSourceIds", () => {
    // Why doesn't this line up with the getGeneratedSourceIdsForURL at all?
    // Also, it just so happens that this is only used by SmartTrace which is
    // only used by the console and object inspector, so if we rip out old
    // console code this code will be dead.
    it("returns the URL of the generated sources", () => {
      expect(ThreadFront.getGeneratedSourceIds("1")).toEqual(undefined);
      expect(ThreadFront.getGeneratedSourceIds("2")).toEqual(undefined);
      expect(ThreadFront.getGeneratedSourceIds("h1")).toEqual(["2"]);
    });
  });

  describe("getGeneratedLocation", () => {
    const location = (sourceId: string) => {
      return {
        sourceId,
        line: 1,
        column: 1,
      };
    };
    it("returns the generated location?", () => {
      // This method assumes that if any source has no "generatedSourceIds"
      // attached then *it* must be a generated location. Which is only true if
      // you assume that this is a set of locations with exactly one generated
      // source I think? Checking `generatedFrom` would be better, but maybe we
      // can find a more exact method to solve the problems this is currently
      // solving.
      // Only used by
      // packages/protocol/thread/value.ts:387
      expect(
        ThreadFront.getGeneratedLocation([location("1"), location("h2"), location("2")])
      ).toEqual(location("1"));
    });
  });
});
