// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can link corresponding sources 1`] = `
Object {
  "h1": Object {
    "canonicalId": "h1",
    "contentHash": "contentHash",
    "correspondingSourceIds": Array [
      "h1",
      "h2",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "h1",
    "kind": "html",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
  "h2": Object {
    "canonicalId": "h2",
    "contentHash": "contentHash",
    "correspondingSourceIds": Array [
      "h1",
      "h2",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "h2",
    "kind": "html",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
}
`;

exports[`is not fooled by pretty-printed sources with missing contentHashes 1`] = `
Object {
  "h1": Object {
    "canonicalId": "h1",
    "contentHash": "contentHash#h1",
    "correspondingSourceIds": Array [
      "h1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "h1",
    "kind": "html",
    "prettyPrinted": "pph1",
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
  "h2": Object {
    "canonicalId": "h2",
    "contentHash": "contentHash#h2",
    "correspondingSourceIds": Array [
      "h2",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "h2",
    "kind": "html",
    "prettyPrinted": "pph2",
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
  "pph1": Object {
    "canonicalId": "h1",
    "contentHash": "contentHash#h1",
    "correspondingSourceIds": Array [
      "pph1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "pph1",
    "kind": "prettyPrinted",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": "h1",
    "url": "/index.html",
  },
  "pph2": Object {
    "canonicalId": "h2",
    "contentHash": "contentHash#h2",
    "correspondingSourceIds": Array [
      "pph2",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "pph2",
    "kind": "prettyPrinted",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": "h2",
    "url": "/index.html",
  },
}
`;

exports[`newSourcesToCompleteSourceDetails can backlink generated sources properly 1`] = `
Object {
  "1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "1",
    ],
    "generated": Array [],
    "generatedFrom": Array [
      "o1",
    ],
    "id": "1",
    "kind": "scriptSource",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.js",
  },
  "o1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#o1",
    "correspondingSourceIds": Array [
      "o1",
    ],
    "generated": Array [
      "1",
    ],
    "generatedFrom": Array [],
    "id": "o1",
    "kind": "sourceMapped",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.ts",
  },
}
`;

exports[`newSourcesToCompleteSourceDetails can combine original, generated, and pretty-printed sources 1`] = `
Object {
  "1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "1",
    ],
    "generated": Array [],
    "generatedFrom": Array [
      "o1",
    ],
    "id": "1",
    "kind": "scriptSource",
    "prettyPrinted": "pp1",
    "prettyPrintedFrom": undefined,
    "url": "/index.js",
  },
  "o1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#o1",
    "correspondingSourceIds": Array [
      "o1",
    ],
    "generated": Array [
      "1",
    ],
    "generatedFrom": Array [],
    "id": "o1",
    "kind": "sourceMapped",
    "prettyPrinted": "ppo1",
    "prettyPrintedFrom": undefined,
    "url": "/src/index.ts",
  },
  "pp1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "pp1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "pp1",
    "kind": "prettyPrinted",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": "1",
    "url": "/src/index.js",
  },
  "ppo1": Object {
    "canonicalId": "o1",
    "contentHash": "contentHash#o1",
    "correspondingSourceIds": Array [
      "ppo1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "ppo1",
    "kind": "prettyPrinted",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": "o1",
    "url": "/src/index.ts",
  },
}
`;

exports[`newSourcesToCompleteSourceDetails can link pretty-printed and minified sources 1`] = `
Object {
  "1": Object {
    "canonicalId": "1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "1",
    "kind": "scriptSource",
    "prettyPrinted": "pp1",
    "prettyPrintedFrom": undefined,
    "url": "/index.js",
  },
  "pp1": Object {
    "canonicalId": "1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "pp1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "pp1",
    "kind": "prettyPrinted",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": "1",
    "url": "/src/index.js",
  },
}
`;

exports[`newSourcesToCompleteSourceDetails can put together HTML sources and their extracted scripts 1`] = `
Object {
  "2": Object {
    "canonicalId": "h1",
    "contentHash": "contentHash#2",
    "correspondingSourceIds": Array [
      "2",
    ],
    "generated": Array [],
    "generatedFrom": Array [
      "h1",
    ],
    "id": "2",
    "kind": "inlineScript",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
  "h1": Object {
    "canonicalId": "h1",
    "contentHash": "contentHash#h1",
    "correspondingSourceIds": Array [
      "h1",
    ],
    "generated": Array [
      "2",
    ],
    "generatedFrom": Array [],
    "id": "h1",
    "kind": "html",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.html",
  },
}
`;

exports[`newSourcesToCompleteSourceDetails should be able to return a complete source from a single newSource event 1`] = `
Object {
  "1": Object {
    "canonicalId": "1",
    "contentHash": "contentHash#1",
    "correspondingSourceIds": Array [
      "1",
    ],
    "generated": Array [],
    "generatedFrom": Array [],
    "id": "1",
    "kind": "scriptSource",
    "prettyPrinted": undefined,
    "prettyPrintedFrom": undefined,
    "url": "/index.js",
  },
}
`;
